# KHDVK-3861B-hi3861

./: LICENSE  README.md
MQTT/: BUILD.gn  Soil.c  Soil.h  main.c  mqtt_utils.c  mqtt_utils.h  mqtt_utils_backup.c  oled_demo.c  sht40.c  sht40.h  wifi_utils.c  wifi_utils.h
doc/sql/: user.sql
doc/文档性资料/: 智慧农业灌溉系统(功能清单+原型图+甘特图).xlsx
farm_web_app/: index.html  package-lock.json  package.json
farm_web_app/server/: router.js
farm_web_app/server/API/: info.js  login.js
farm_web_app/src/: main.ts
farm_web_app/src/components/: MqttDemo copy.vue  MqttDemo.vue  home.vue  login.vue  register.vue
farm_web_app/src/router/: index.js
